--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-pyrogram==2.0.80
+pyrogram>=2.0.0
 TgCrypto
 motor
 dnspython
 hachoir
 Pillow
-aiohttp
-pytz
-humanize
+requests
 pyromod
-ffmpeg-python
+aiohttp
+python-dotenv
+yt-dlp
+opencv-python
+numpy
