--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,25 @@ python-dotenv
 yt-dlp
 opencv-python
 numpy
+
+pyrogram==2.0.80
+
+TgCrypto
+
+motor
+
+dnspython
+
+hachoir
+
+Pillow
+
+aiohttp
+
+pytz
+
+humanize
+
+pyromod
+
+ffmpeg-python
