--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,15 @@
-pyrogram>=2.0.0
-TgCrypto
-motor
-dnspython
-hachoir
-Pillow
-requests
-pyromod
-aiohttp
-python-dotenv
-yt-dlp
-opencv-python
-numpy
-
 pyrogram==2.0.80
-
 TgCrypto
-
 motor
-
 dnspython
-
 hachoir
-
 Pillow
-
 aiohttp
-
 pytz
-
 humanize
-
 pyromod
-
 ffmpeg-python
+opencv-python-headless
+numpy
+requests
+psutil
